# docflow

./: CLAUDE.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  demo_data.py  main.py  version.py
backend/app/llm/: __init__.py  client.py
backend/app/models/: __init__.py  demo.py  document.py  domain.py  export.py  preprocess.py  review.py
backend/app/repos/: __init__.py  documents.py  extractions.py  review_log.py  storage.py  supabase_client.py
backend/app/routes/: __init__.py  demo.py  documents.py  export.py  extractions.py
backend/app/services/: __init__.py  classify.py  demo_guard.py  export.py  extract.py  field_path.py  filetypes.py  flags.py  ingestion.py  preprocess.py  rate_limit.py  validate.py
backend/prompts/: classify.v1.md  echo.v1.md  extract_act.v1.md  extract_invoice.v1.md
backend/scripts/: seed_demo.py
backend/scripts/demo_snapshots/: act_clean.json  arithmetic_error.json  clean_text.json  good_scan.json  low_quality_photo.json  multi_page.json
backend/tests/: _pdfgen.py  conftest.py  test_classify.py  test_classify_smoke.py  test_demo_routes.py  test_export.py  test_extract.py  test_extract_smoke.py  test_field_path.py  test_filetypes.py  test_health.py  test_ingestion_integration.py  test_ingestion_routes.py  test_ingestion_routing.py  test_llm_client.py  test_llm_smoke.py  test_preprocess.py  test_rate_limit.py  test_review_routes.py  test_seed_demo.py  test_validate.py
backend/tests/fixtures/: generate_act_fixtures.py  generate_fixtures.py  generate_invoice_fixtures.py
docs/: LESSONS.md  PLAN.md  TZ.md  UI_SPEC.md.md  decisions.md  e2e-review-checklist.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  demo.ts  history.ts  review.ts  schemas.ts
frontend/src/components/: DocumentPane.tsx  Field.tsx  FieldEditBody.tsx  FieldsPane.tsx  ItemsTable.tsx  ThemeSwitch.tsx
frontend/src/pages/: DemoPage.tsx  HistoryPage.tsx  ReviewPage.tsx  history.css  review.css
frontend/src/state/: confirmGate.ts  fieldPath.ts  flags.ts  format.ts  guidedNav.ts  historyFilter.ts  polling.ts  reviewReducer.ts  statusBadge.ts  textSearch.ts
frontend/tests/: api.test.ts  confirmGate.test.ts  demo.test.ts  fieldPath.test.ts  flags.test.ts  guidedNav.test.ts  historyFilter.test.ts  polling.test.ts  reviewReducer.test.ts  statusBadge.test.ts  textSearch.test.ts
supabase/migrations/: 001_init.sql  002_preprocess.sql  003_export.sql
