[project]
name = "docflow-backend"
version = "0.1.0"
description = "DocFlow backend — document intelligence pipeline (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.7",
    "anthropic>=0.57",
    "meter",
    # supabase: T2 ingestion needs Storage (private "documents" bucket) and the
    # documents table via the service-role key. Was already resolved transitively
    # through `meter`; declared explicitly so the repos layer does not depend on a
    # transitive pin.
    "supabase>=2.0",
]

# Meter (LLM cost/latency tracker) is installed as a git dependency pointing at
# the meter monorepo's Python package subdirectory.
[tool.uv.sources]
meter = { git = "https://github.com/anton-dot911/meter", subdirectory = "packages/meter-py", branch = "main" }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# llm/supabase-marked tests hit real external services; excluded from default runs.
addopts = "-m 'not llm and not supabase'"
markers = [
    "llm: smoke tests that call the real Anthropic API (run with: uv run pytest -m llm)",
    "supabase: integration tests against a real Supabase project (run with: uv run pytest -m supabase)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]

# Meter ships no py.typed marker, so treat it as an untyped third-party import
# rather than failing strict mode on the missing stubs.
[[tool.mypy.overrides]]
module = ["meter.*"]
ignore_missing_imports = true

# supabase and its sub-packages ship incomplete/untyped stubs; treat their
# imports as untyped rather than failing strict mode.
[[tool.mypy.overrides]]
module = ["supabase.*", "storage3.*", "postgrest.*"]
ignore_missing_imports = true
